--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -49,6 +49,37 @@
       <version>1.0.0</version>
       <scope>provided</scope>
     </dependency>
+<!-- https://mvnrepository.com/artifact/com.github.scopt/scopt_2.11 -->
+<dependency>
+    <groupId>com.github.scopt</groupId>
+    <artifactId>scopt_2.11</artifactId>
+    <version>3.5.0</version>
+</dependency>
+    <dependency>
+        <groupId>org.apache.mahout</groupId>
+        <artifactId>mahout-core</artifactId>
+        <version>0.9</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.mahout</groupId>
+        <artifactId>mahout-math</artifactId>
+        <version>0.12.0</version>
+    </dependency>
+    <!--dependency>
+       <groupId>org.apache.hadoop</groupId>
+       <artifactId>hadoop-common</artifactId>
+       <version>1.2.1</version>
+    </dependency>
+    <dependency>
+       <groupId>org.apache.hadoop</groupId>
+       <artifactId>hadoop-mapreduce-client-core</artifactId>
+       <version>1.2.1</version>
+    </dependency>
+    <dependency>
+       <groupId>org.apache.hadoop</groupId>
+       <artifactId>hadoop-mapreduce-client-common</artifactId>
+       <version>1.2.1</version>
+    </dependency-->
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_${scala.binary.version}</artifactId>
