--- a/core/pom.xml
+++ b/core/pom.xml
@@ -34,6 +34,12 @@
   <name>Spark Project Core</name>
   <url>http://spark.apache.org/</url>
   <dependencies>
+<!-- https://mvnrepository.com/artifact/org.apache.mahout/mahout-math -->
+<dependency>
+    <groupId>org.apache.mahout</groupId>
+    <artifactId>mahout-math</artifactId>
+    <version>0.12.2</version>
+</dependency>
     <dependency>
       <groupId>org.apache.avro</groupId>
       <artifactId>avro-mapred</artifactId>
